<resources>
    <string name="app_name">Flintro</string>
    <string name="login_hint">Email или логин</string>
    <string name="signin_hint">Email</string>
    <string name="password_hint">Пароль</string>
    <string name="login_switch">Зарегистрироваться</string>
    <string name="signin_switch">Войти</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_swipe">Свайп</string>
    <string name="title_likes">Лайки</string>
    <string name="title_questions">Вопросы</string>
    <string name="title_chat">Чат</string>
    <string name="title_profile">Профиль</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>