<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_swipe"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_swipe" />

    <item
        android:id="@+id/navigation_likes"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_likes" />

    <item
        android:id="@+id/navigation_questions"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_questions" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_profile" />
</menu>